[package]
name = "blob-gas-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", features = [
    "full",
] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", features = [
    "serde",
] }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", features = [
    "test-utils",
] }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-primitives-traits = { version = "0.1.0", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }

# revm
revm-bytecode = { version = "9.0.0", default-features = false }

# alloy
alloy-eips = { version = "1.8.2", default-features = false }
alloy-genesis = { version = "1.8.2", default-features = false }
alloy-consensus = { version = "1.8.2", default-features = false }
alloy-rlp = "0.3.13"
alloy-rpc-types = { version = "1.8.2", features = [
    "eth",
], default-features = false }
alloy-signer = { version = "1.8.2", default-features = false }
alloy-signer-local = { version = "1.8.2", default-features = false }

alloy-primitives = { version = "1.5.6", default-features = false }
alloy-sol-types = { version = "1.3.1", features = ["json"] }
foundry-blob-explorers = "0.20"

discv5 = "0.10"
enr = "0.13"
secp256k1 = { version = "0.30", default-features = false, features = [
    "global-context",
    "std",
    "recovery",
] }

# async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
jsonrpsee = "0.26"

# serde
serde = "1"
serde_json = "1"

# misc
eyre = "0.6"
rand = "0.9"

# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }

# rocksdb
rocksdb = { version = "0.24" }

#[patch.crates-io]
#revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "667180b" }
